--- a/.github/workflows/docker_image.yml
+++ b/.github/workflows/docker_image.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   deploy:
-    uses: .github/workflows/workflow-deploy-gcp.yml
+    uses: ./.github/workflows/workflow-deploy-gcp.yml
     with:
       container-name: "nachet-backend"
       tag: "latest"
