--- a/.github/workflows/docker_image.yml
+++ b/.github/workflows/docker_image.yml
@@ -14,6 +14,6 @@ jobs:
       container-name: "nachet-backend"
       tag: "latest"
       env_vars: |
-        FAKE_REPOSITORY_SECRET: FAKE_REPOSITORY_SECRET_VALUE
+        FAKE_REPOSITORY_SECRET=FAKE_REPOSITORY_SECRET_VALUE
 
     secrets: inherit
