--- a/.github/workflows/docker_image.yml
+++ b/.github/workflows/docker_image.yml
@@ -14,6 +14,6 @@ jobs:
       container-name: "nachet-backend"
       tag: "4402fe7ead124887a6d2b463ba79903586c66898"
       env_vars: |
-        FAKE_REPOSITORY_SECRET=FAKE_REPOSITORY_SECRET_VALUE
+        FAKE_REPOSITORY_SECRET=${{secrets.FAKE_REPOSITORY_SECRET}}
 
     secrets: inherit
